# TestbeamReco

./: .gitignore  README.md  temp.sh
cfg/: BNL2020_200V_274_rootFileList.txt  BNL2020_210V_271_rootFileList.txt  BNL2020_220V_272_rootFileList.txt  BNL2020_225V_273_rootFileList.txt  BNL2020_zScan_200V_274_rootFileList.txt  BNL2020_zScan_210V_271_rootFileList.txt  BNL2020_zScan_220V_272_rootFileList.txt  BNL2020_zScan_225V_273_rootFileList.txt  BNL2021_2022_medium_285V_646_rootFileList.txt  BNL2021_hexpix_175V_310_rootFileList.txt  BNL2021_medium_260V_295_rootFileList.txt  BNL2021_medium_265V_292_rootFileList.txt  BNL2021_medium_275V_291_rootFileList.txt  BNL2021_medium_280V_289_rootFileList.txt  BNL2021_medium_285V_290_rootFileList.txt  BNL2021_medium_290V_294_rootFileList.txt  BNL2021_narrow_285V_299_rootFileList.txt  BNL2021_narrow_290V_300_rootFileList.txt  BNL2021_quadpix_190V_306_rootFileList.txt  BNL2021_wide_275V_298_rootFileList.txt  BNL2021_wide_285V_296_rootFileList.txt  BNL2021_wide_290V_297_rootFileList.txt  BNL2021_zScan_medium_260V_295_rootFileList.txt  BNL2021_zScan_medium_265V_292_rootFileList.txt  BNL2021_zScan_medium_275V_291_rootFileList.txt  BNL2021_zScan_medium_280V_289_rootFileList.txt  BNL2021_zScan_medium_285V_290_rootFileList.txt  BNL2021_zScan_medium_290V_294_rootFileList.txt  BNL2021_zScan_narrow_285V_299_rootFileList.txt  BNL2021_zScan_narrow_290V_300_rootFileList.txt  BNL2021_zScan_wide_275V_298_rootFileList.txt  BNL2021_zScan_wide_285V_296_rootFileList.txt  BNL2021_zScan_wide_290V_297_rootFileList.txt  BNL_20um_1cm_400um_W3074_1_4_rootFileList.txt  BNL_20um_1cm_400um_W3075_1_2_rootFileList.txt  BNL_20um_1cm_450um_W3074_2_1_rootFileList.txt  BNL_20um_1cm_450um_W3075_2_4_rootFileList.txt  BNL_500um_squares_175V_638_rootFileList.txt  BNL_50um_1cm_400um_W3051_1_4_rootFileList.txt  BNL_50um_1cm_450um_W3051_2_2_rootFileList.txt  (+60 more)
cfg/FCFDv0/: CFD_noSpy_120V_775_rootFileList.txt  CFD_noSpy_140V_774_rootFileList.txt  CFD_noSpy_160V_773_rootFileList.txt  CFD_noSpy_180V_772_rootFileList.txt  CFD_noSpy_190V_771_rootFileList.txt  CFD_noSpy_200V_770_rootFileList.txt  CFD_noSpy_205V_769_rootFileList.txt  CFD_noSpy_210V_768_rootFileList.txt  CFD_noSpy_215V_767_rootFileList.txt  CFD_noSpy_220V_766_rootFileList.txt  CFD_noSpy_225V_765_rootFileList.txt  CFD_noSpy_230V_764_rootFileList.txt  CFD_spy_120V_752_rootFileList.txt  CFD_spy_140V_753_rootFileList.txt  CFD_spy_160V_754_rootFileList.txt  CFD_spy_180V_755_rootFileList.txt  CFD_spy_190V_763_rootFileList.txt  CFD_spy_200V_756_rootFileList.txt  CFD_spy_205V_761_rootFileList.txt  CFD_spy_210V_757_rootFileList.txt  CFD_spy_215V_762_rootFileList.txt  CFD_spy_220V_758_rootFileList.txt  CFD_spy_225V_759_rootFileList.txt  CFD_spy_230V_760_rootFileList.txt
cfg/HPKMay2023/: HPK_KOJI_20T_1P0_80P_60M_E240_112V_rootFileList.txt  HPK_KOJI_50T_1P0_80P_60M_E240_190V_rootFileList.txt  HPK_W11_22_3_20T_500x500_150M_C600_116V_rootFileList.txt  HPK_W2_3_2_50T_1P0_500P_50M_E240_180V_rootFileList.txt  HPK_W4_17_2_50T_1P0_500P_50M_C240_204V_rootFileList.txt  HPK_W5_17_2_50T_1P0_500P_50M_E600_186V_rootFileList.txt  HPK_W5_17_2_50T_1P0_500P_50M_E600_188V_rootFileList.txt  HPK_W5_17_2_50T_1P0_500P_50M_E600_190V_rootFileList.txt  HPK_W5_17_2_50T_1P0_500P_50M_E600_192V_rootFileList.txt  HPK_W5_17_2_50T_1P0_500P_50M_E600_194V_rootFileList.txt  HPK_W5_1_1_50T_500x500_150M_E600_185V_rootFileList.txt  HPK_W8_17_2_50T_1P0_500P_50M_C600_200V_rootFileList.txt  HPK_W8_17_2_50T_1P0_500P_50M_C600_206V_rootFileList.txt  (+7 more)
interface/: Align.h  Analyze.h  AnalyzeCFD.h  Geometry.h  Geometry2022.h  Geometry2023.h  InitialAnalyzer.h  MakeNNVariables.h  MiniTupleMaker.h  NTupleReader.h  PrepNTupleVars.h  RecoAnalyzer.h  SATException.h  SignalProperties.h  SpatialReconstruction.h  Timing.h  Utility.h  samples.h
macros/: AlignBinning.py  ComparePosRecoFit.py  CompareSetups_Amp.py  CompareSetups_Charge.py  CompareSetups_Efficiency.py  CompareSetups_PosFit.py  CompareSetups_PosFitComprehensive.py  CompareSetups_PosRes.py  CompareSetups_Risetime.py  CompareSetups_TimeRes.py  CompareSetups_TimeRes_vs_CFD.py  DoPositionRecoFit.py  DoPositionRecoFit_Pad.py  EfficiencyUtils.py  FinalBNLs_DoPositionRecoFit.py  FinalBNLs_PlotAmplitudeVsX.py  FinalBNLs_PlotEfficiency.py  FinalBNLs_PlotTimeDiffVsX.py  FinalBNLs_PlotXRecoDiffVsX.py  FinalBNLs_PlotXRecoDiffVsX_MeanV2.py  FinalBNLs_plot1DRes.py  FinalHPKp_DoPositionRecoFit_Pad.py  FinalHPKp_PlotAmplitudeVsXandY_Pad.py  FinalHPKp_PlotTimeDiffVsXandY_Pad.py  FinalHPKp_PlotXRecoDiffVsX.py  Final_1dAmplitude.py  Final_DoPositionRecoFit_Pad.py  Final_PlotAmplitudeVsXandY_Pad.py  Final_PlotTimeDiffVsXandY_Pad.py  Final_PlotXRecoDiffVsX.py  FindDelayCorrections.py  FindInputHistos4YReco.py  FindPadCenters.py  FindStripCenters.py  GeneralSummaryPlots.py  GetPositionFitPar.py  MPV_Trend.C  Paper_1DRes.py  Paper_1DRes_500um.py  Paper_ComparePosRecoFit.py  (+118 more)
scripts/: makeSoftLink.sh  rmSoftLink.sh
src/: Align.cc  Analyze.cc  AnalyzeCFD.cc  InitialAnalyzer.cc  MakeNNVariables.cc  MiniTupleMaker.cc  NTupleReader.cc  RecoAnalyzer.cc  SATException.cc  Utility.cc  samples.cc  samplesModule.cc
test/: 1cm_100uw_runEverything.sh  1cm_200uw_runEverything.sh  1cm_300uw_runEverything.sh  Config.h  Makefile.in  MyAnalysis.C  configure  configure.ac  rootFileList.txt  runEverything.sh  runEverything1p0.sh  runEverything2023.sh  runEverything2p5.sh  runEverythingBiasScan.sh  runEverythingHPK.sh  runEverythingMay2023.sh  runHPK.sh  sampleCollections.cfg  sampleSets.cfg  script.sh  setup.sh
test/LGADNN/: DataGetter.py  Validation.py  train.py
test/sh/: 1cm_100uw_runEverything.sh  runEverything2022_1p0cm200uw.sh  runEverything2022_1p0cm300uw.sh  runEverything2022_1p0cmBiasScan.sh  runEverything2022_2p5cm.sh  runEverything2022_All.sh  runEverything2023.sh  runEverything2023_AprCross.sh  runEverything2023_BNLpadsShapes.sh  runEverything2023_Compare.sh  runEverything2023_JanPads.sh  runEverything2023_JanStrips.sh  runEverything2023_MayPads.sh  runEverything2023_MayStrips.sh  runEverythingMay2023.sh  runHPK.sh
test/sh/old/: plotWaveFormsCSV.sh
(+61 files in other folders)
